Skapat nya thorw new IllegalArgumentException to match test results of warehouseTest & category.Test